// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with color danger 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  background-color: #ff3d00;
  border: 2px solid #ff3d00;
  color: #212121;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:enabled {
  background-color: #b22a00;
  border-color: #b22a00;
}

<button
    class="c0"
    color="danger"
    type="button"
  >
    Click here
  </button>
</DocumentFragment>
`;

exports[`renders with color default 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  background-color: #e0e0e0;
  border: 2px solid #e0e0e0;
  color: #212121;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:enabled {
  background-color: #5a6268;
  border-color: #5a6268;
}

<button
    class="c0"
    color="default"
    type="button"
  >
    Click here
  </button>
</DocumentFragment>
`;

exports[`renders with color primary 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  background-color: #2196f3;
  border: 2px solid #2196f3;
  color: #fff;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:enabled {
  background-color: #1769aa;
  border-color: #1769aa;
}

<button
    class="c0"
    color="primary"
    type="button"
  >
    Click here
  </button>
</DocumentFragment>
`;

exports[`renders with primary color and linked variant 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  background-color: #2196f3;
  border: 2px solid #2196f3;
  color: #fff;
  background-color: transparent;
  border-color: transparent;
  color: #2196f3;
  padding-left: 0;
  padding-right: 0;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:enabled {
  background-color: #1769aa;
  border-color: #1769aa;
}

.c0:hover:enabled {
  background-color: transparent;
  border-color: transparent;
  color: #1769aa;
}

<button
    class="c0"
    color="primary"
    type="button"
  >
    Click here
  </button>
</DocumentFragment>
`;

exports[`renders with primary color and outlined variant 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  background-color: #2196f3;
  border: 2px solid #2196f3;
  color: #fff;
  background-color: transparent;
  color: #2196f3;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:enabled {
  background-color: #1769aa;
  border-color: #1769aa;
}

.c0:hover:enabled {
  background-color: transparent;
  color: #1769aa;
}

<button
    class="c0"
    color="primary"
    type="button"
  >
    Click here
  </button>
</DocumentFragment>
`;

exports[`renders with variant default 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  background-color: #e0e0e0;
  border: 2px solid #e0e0e0;
  color: #212121;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:enabled {
  background-color: #5a6268;
  border-color: #5a6268;
}

<button
    class="c0"
    color="default"
    type="button"
  >
    Click here
  </button>
</DocumentFragment>
`;

exports[`renders with variant linked 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  background-color: #e0e0e0;
  border: 2px solid #e0e0e0;
  color: #212121;
  background-color: transparent;
  border-color: transparent;
  color: #757575;
  padding-left: 0;
  padding-right: 0;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:enabled {
  background-color: #5a6268;
  border-color: #5a6268;
}

.c0:hover:enabled {
  background-color: transparent;
  border-color: transparent;
  color: #5a6268;
}

<button
    class="c0"
    color="default"
    type="button"
  >
    Click here
  </button>
</DocumentFragment>
`;

exports[`renders with variant outlined 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  cursor: pointer;
  background-color: #e0e0e0;
  border: 2px solid #e0e0e0;
  color: #212121;
  background-color: transparent;
  color: #212121;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:enabled {
  background-color: #5a6268;
  border-color: #5a6268;
}

.c0:hover:enabled {
  background-color: transparent;
  color: #5a6268;
}

<button
    class="c0"
    color="default"
    type="button"
  >
    Click here
  </button>
</DocumentFragment>
`;
